@@ -51,6 +51,7 @@ Change log next version
 * Added support for argument lists in root and rootPath methods in the response specification (issue 117).
 * Request logging filter now logs base path and base uri (issue 145).
 * Added method getCompleteRequestPath to com.jayway.restassured.filter.FilterContext. This method provides the fully-qualified URL including scheme and port number to the request path.
+* Fixed content encoding for content types ending with +xml, +json and +html to automatically be encoded using the correct encoder methods (issue 160).
 
 Change log 1.5 (2011-12-20)
 ---------------------------
